Lecture 05 - minor section title change

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -505,7 +505,7 @@ QtRvSim \url{https://github.com/cvut/qtrvsim}
 \textbf{A)} add \hfill \textbf{B)} addi \hfill \textbf{C)} beq \hfill \textbf{ D)} or \hfill ?
 \end{frame}
 
-\section{Úvahy a omezení pro reálný návrh (pro adepty o známku A)}
+\section{Úvahy a omezení pro reálný návrh (pro adepty na známku A)}
 
 \begin{frame}
 \frametitle{Requirements for Pipeline Timing}
